--- a/feeds/templates/deal-change-title.html
+++ b/feeds/templates/deal-change-title.html
@@ -1,2 +1,2 @@
 {% load i18n %}
-{% trans "Change to Deal" %} {{ obj.activity_identifier }} on {{ obj.history_date|date:"d M Y" }}
+{% trans "Change to Deal" %} {{ obj.activity_identifier }} on {{ timestamp|date:"d M Y" }}
