Added user report

--- a/templates/base.html
+++ b/templates/base.html
@@ -346,6 +346,14 @@
 {% endblock %}
 {% block js %}
 {% endblock %}
-
+<script type="text/javascript">
+window._urq = window._urq || [];
+_urq.push(['initSite', '076e0082-9cd3-4945-91f7-b3678e84373e']);
+(function() {
+var ur = document.createElement('script'); ur.type = 'text/javascript'; ur.async = true;
+ur.src = ('https:' == document.location.protocol ? 'https://cdn.userreport.com/userreport.js' : 'http://cdn.userreport.com/userreport.js');
+var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ur, s);
+})();
+</script>
 </body>
 </html>
