--- a/templates/filters.html
+++ b/templates/filters.html
@@ -117,10 +117,10 @@
                 <div class="col-sm-12">
                     <h6>{% trans "Select status of deals" %}</h6>
                     <select id="id_status" name="status" multiple="multiple">
-                        <option value="active"{% if "active" in deal_status %} selected="selected"{% endif %}>{% trans "Added (not changed)" %}</option>
-                        <option value="overwritten"{% if "overwritten" in deal_status %} selected="selected"{% endif %}>{% trans "Changed" %}</option>
-                        <option value="deleted"{% if "deleted" in deal_status %} selected="selected"{% endif %}>{% trans "Deleted" %}</option>
-                        <option value="pending"{% if "pending" in deal_status %} selected="selected"{% endif %}>{% trans "Pending" %}</option>
+                        <option value="active"{% if "active" in status %} selected="selected"{% endif %}>{% trans "Added (not changed)" %}</option>
+                        <option value="overwritten"{% if "overwritten" in status %} selected="selected"{% endif %}>{% trans "Changed" %}</option>
+                        <option value="deleted"{% if "deleted" in status %} selected="selected"{% endif %}>{% trans "Deleted" %}</option>
+                        <option value="pending"{% if "pending" in status %} selected="selected"{% endif %}>{% trans "Pending" %}</option>
                     </select>
                 </div>
             </div>
