--- a/templates/export.html
+++ b/templates/export.html
@@ -14,39 +14,39 @@
     {% endif %}
   {% else %}
     {% if deal %}
-    <a href="{% url "export" deal_id=deal.activity_identifier format="xml" %}" class="btn-media xml">
+    <a href="{% url "export" deal_id=deal.activity_identifier format="xml" %}?{{ request.GET.urlencode }}" class="btn-media xml">
     {% else %}
-    <a href="{% url "export" format="xml" %}" class="btn-media xml">
+    <a href="{% url "export" format="xml" %}?{{ request.GET.urlencode }}" class="btn-media xml">
     {% endif %}
   {% endif %}
     <i class=""></i>XML
   </a>
   {% if group_slug %}
     {% if group_value %}
-    <a href="{% url "export" group=group_slug list=group_value format="csv" %}" class="btn-media csv">
+    <a href="{% url "export" group=group_slug list=group_value format="csv" %}?{{ request.GET.urlencode }}" class="btn-media csv">
     {% else %}
-    <a href="{% url "export" group=group_slug format="csv" %}" class="btn-media csv">
+    <a href="{% url "export" group=group_slug format="csv" %}?{{ request.GET.urlencode }}" class="btn-media csv">
     {% endif %}
   {% else %}
     {% if deal %}
-    <a href="{% url "export" deal_id=deal.activity_identifier format="csv" %}" class="btn-media csv">
+    <a href="{% url "export" deal_id=deal.activity_identifier format="csv" %}?{{ request.GET.urlencode }}" class="btn-media csv">
     {% else %}
-    <a href="{% url "export" format="csv" %}" class="btn-media csv">
+    <a href="{% url "export" format="csv" %}?{{ request.GET.urlencode }}" class="btn-media csv">
     {% endif %}
   {% endif %}
     <i class=""></i>CSV
   </a>
   {% if group_slug %}
     {% if group_value %}
-    <a href="{% url "export" group=group_slug list=group_value format="xls" %}" class="btn-media xls">
+    <a href="{% url "export" group=group_slug list=group_value format="xls" %}?{{ request.GET.urlencode }}" class="btn-media xls">
     {% else %}
-    <a href="{% url "export" group=group_slug format="xls" %}" class="btn-media xls">
+    <a href="{% url "export" group=group_slug format="xls" %}?{{ request.GET.urlencode }}" class="btn-media xls">
     {% endif %}
   {% else %}
     {% if deal %}
-    <a href="{% url "export" deal_id=deal.activity_identifier format="xls" %}" class="btn-media xls">
+    <a href="{% url "export" deal_id=deal.activity_identifier format="xls" %}?{{ request.GET.urlencode }}" class="btn-media xls">
     {% else %}
-    <a href="{% url "export" format="xls" %}" class="btn-media xls">
+    <a href="{% url "export" format="xls" %}?{{ request.GET.urlencode }}" class="btn-media xls">
     {% endif %}
   {% endif %}
     <i class=""></i>XLS
