--- a/templates/blog/blog_post.html
+++ b/templates/blog/blog_post.html
@@ -31,7 +31,7 @@
         {% if blog.tags.all %}
             Tags: 
                 {% for tag in blog.tags.all %}
-                    <a href="{% url 'blog:tag' tag.slug %}/">{{ tag }}</a>{% if not forloop.last %}, {% endif %}
+                    <a href="{% url 'news:tag' tag.slug %}/">{{ tag }}</a>{% if not forloop.last %}, {% endif %}
                 {% endfor %}
         {% endif %}
     </div>
@@ -39,7 +39,7 @@
         {% if blog.categories.all %}
             Posted in 
                 {% for cat in blog.categories.all %}
-                    <a href="{% url 'blog:category' cat.category.slug %}">{{ cat.category.name }}</a>{% if not forloop.last %}, {% endif %}
+                    <a href="{% url 'news:category' cat.category.slug %}">{{ cat.category.name }}</a>{% if not forloop.last %}, {% endif %}
                 {% endfor %} | 
         {% endif %}
 
