--- a/grid/templates/add-deal.html
+++ b/grid/templates/add-deal.html
@@ -1,9 +1,11 @@
 {% extends "global_base.html" %}
 {% load static i18n custom_tags humanize %}
 
-{% block global_head %}
+{% block head %}
+{{ block.super }}
 {#     <script src="{% static "js/editor/livesearch.js" %}" type="text/javascript" charset="utf-8"></script> #}
     <script src="{% static "js/editor/add_change.js" %}" type="text/javascript" charset="utf-8"></script>
+    <script src="{% static "js/editor/stakeholder.js" %}" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
 
 {% block page_title %}{% trans "Add a deal" %}{% endblock %}
