--- a/grid/templates/change-deal.html
+++ b/grid/templates/change-deal.html
@@ -2,9 +2,11 @@
 {% load i18n custom_tags static %}
 {% load humanize %}
 
-{% block global_head %}
+{% block head %}
+{{ block.super }}
 {#     <script src="{% static "js/editor/livesearch.js" %}" type="text/javascript" charset="utf-8"></script> #}
     <script src="{% static "js/editor/add_change.js" %}" type="text/javascript" charset="utf-8"></script>
+    <script src="{% static "js/editor/stakeholder.js" %}" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
 
 
@@ -12,7 +14,7 @@
 {% block title %}{% trans "Change Deal" %} #{{ deal_id }}{% endblock %}
 
 {% block breadcrumb_inner %}
-    <li><a href="{% url 'manage' %}">Manage</a></li>
+    <li><a href="{% url 'manage' %}">{% trans "Manage" %}</a></li>
     <li>{% trans "Deal" %} #{{ deal_id }}</li>
 {% endblock %}
 
