--- a/grid/templates/deal-detail.html
+++ b/grid/templates/deal-detail.html
@@ -1,8 +1,11 @@
 {% extends "global_base.html" %}
-{% load i18n custom_tags static %}
-{% load humanize %}
+{% load i18n custom_tags static humanize comments threadedcomments_tags %}
 
-{% load comments threadedcomments_tags %}
+{% block head %}
+{{ block.super }}
+    <script src="{% static "js/editor/stakeholder.js" %}" type="text/javascript" charset="utf-8"></script>
+    <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
+{% endblock %}
 
 {% block page_title %}{% trans "Deal" %} #{{ deal.activity_identifier }}{% endblock %}
 {% block title %}{% trans "Deal" %} #{{ deal.activity_identifier }}{% endblock %}
@@ -134,9 +137,8 @@
                 count++;
             });
 
-            $('.operational_stakeholder').append('<div id="chart0"></div>');
-
-            loadSankey(0, $('#deal-stakeholder').val())
+            //$('.operational_stakeholder').append('<div id="chart0"></div>');
+            //loadSankey(0, $('#deal-stakeholder').val())
         })
     </script>
 {% endblock %}
