--- a/landmatrix/static/css/map.scss
+++ b/landmatrix/static/css/map.scss
@@ -11,9 +11,9 @@
     float: right;
     top: 8px;
     text-align: center;
-    background-color: #fff;
+    background-color: $lm_offwhite;
     width: 10em;
-    background-opacity: 0.5;
+    opacity: 0.5;
 }
 
 .popover-title {
@@ -50,12 +50,12 @@ p {
 .ol-popup {
     font-size: 12px;
     position: absolute;
-    background-color: white;
+    background-color: $lm_offwhite;
     -webkit-filter: drop-shadow(0 1px 4px rgba(0, 0, 0, 0.2));
     filter: drop-shadow(0 1px 4px rgba(0, 0, 0, 0.2));
     padding: 15px;
     border-radius: 10px;
-    border: 1px solid #cccccc;
+    border: 1px solid $lm_medium2;
     bottom: 12px;
     left: -50px;
     min-width: 280px;
@@ -76,14 +76,14 @@ p {
 }
 
 .ol-popup:after {
-    border-top-color: white;
+    border-top-color: $lm_offwhite;
     border-width: 10px;
     left: 48px;
     margin-left: -10px;
 }
 
 .ol-popup:before {
-    border-top-color: #cccccc;
+    border-top-color: $lm_medium2;
     border-width: 11px;
     left: 48px;
     margin-left: -11px;
@@ -157,6 +157,8 @@ div.layer-group > a:hover {
 }
 
 #legendstuff {
+    min-width: 250px;
+    min-height: 100px;
     max-height: 50vh;
     overflow-y: auto;
     margin-bottom: 8px;
