--- a/grid/templates/deal-detail.html
+++ b/grid/templates/deal-detail.html
@@ -35,7 +35,7 @@
         <div class="panel-group" id="accordion">
             {% if forms %}
                 {% for form in forms %}
-                    {% if form.get_fields_display %}
+                    {% if form.get_fields_display or form.forms %}
                         <div class="panel panel-default">
 
                             <div class="panel-heading">
@@ -53,23 +53,13 @@
                             <div id="collapse_{{ forloop.counter }}"
                                  class="panel-collapse collapse{% if forloop.first %} in {% endif %}">
                                 <div class="panel-body">
-                                    {% for field in form.get_fields_display %}
-                                        {% if field.name == 'tg' %}
-                                            <h3>{{ field.value }}</h3>
-                                        {% else %}
-                                            <div class="row {{ field.name }}">
-                                                <div class="col-md-3">
-                                                    {{ field.label }}
-                                                </div>
-                                                <div class="col-md-9">
-                                                    {{ field.value|safe|decimalgroupstring }}
-                                                </div>
-                                            </div>
-                                            {% if field.name == 'location' %}
-                                                <div class="map"></div>
-                                            {% endif %}
-                                        {% endif %}
-                                    {% endfor %}
+                                    {% if form.forms %}
+                                        {% for subform in form.forms %}
+                                            {% include "includes/dealpanels-display.html" with form=subform form_count=forloop.counter %}
+                                        {% endfor %}
+                                    {% else %}
+                                        {% include "includes/dealpanels-display.html" with form=form %}
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
