Fixed year based data in detail view

--- a/grid/templates/deal-detail.html
+++ b/grid/templates/deal-detail.html
@@ -16,6 +16,9 @@
 {% endblock %}
 
 {% block subnav_inner %}
+    <li role="presentation">
+        <a href="{% url "change_deal" deal.activity_identifier %}" target="_blank"><i class="fa fa-pencil"></i> {% trans "Edit" %}</a>
+    </li>
     <li role="presentation"><a href="#history">
         <i class="fa fa-history"></i> {% trans "History" %}
     </a></li>
