--- a/landmatrix/static/css/main.css
+++ b/landmatrix/static/css/main.css
@@ -459,6 +459,8 @@ a.remove-ybd:hover {
   .negotiation_status .input-group .year-based-year,
   .implementation_status .input-group .year-based-year {
     width: 30%; }
+  .production_size .input-group,
+  .contract_size .input-group,
   .agreement_duration .input-group,
   .total_jobs_current .input-group,
   .total_jobs_current_employees .input-group,
@@ -478,6 +480,8 @@ a.remove-ybd:hover {
   .actors_involved .input-group,
   .actors_classification .input-group {
     width: 80%; }
+  .production_size .input-group .year-based,
+  .contract_size .input-group .year-based,
   .agreement_duration .input-group .year-based,
   .total_jobs_current .input-group .year-based,
   .total_jobs_current_employees .input-group .year-based,
@@ -497,6 +501,8 @@ a.remove-ybd:hover {
 .actors_involved .input-group .year-based,
   .actors_classification .input-group .year-based {
     width: 62%; }
+  .production_size .input-group .year-based-year,
+  .contract_size .input-group .year-based-year,
   .agreement_duration .input-group .year-based-year,
   .total_jobs_current .input-group .year-based-year,
   .total_jobs_current_employees .input-group .year-based-year,
