Fixed change deal form

--- a/grid/templates/grid/subnav.html
+++ b/grid/templates/grid/subnav.html
@@ -28,11 +28,11 @@
                         <li class="dropdown">
                             <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                aria-haspopup="true"
-                               aria-expanded="false"><span>{% trans "By Stakeholder" %} <span class="caret"></span></span></a>
+                               aria-expanded="false"><span>{% trans "By Investor" %} <span class="caret"></span></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="{% url 'table_list' group='by-stakeholder-name' %}">{% trans "By Stakeholder" %}</a></li>
-                                <li><a href="{% url 'table_list' group='by-stakeholder-region' %}">{% trans "By Stakeholder Region" %}</a></li>
-                                <li><a href="{% url 'table_list' group='by-stakeholder-country' %}">{% trans "By Stakeholder Country" %}</a></li>
+                                <li><a href="{% url 'table_list' group='by-investor-name' %}">{% trans "By Investor" %}</a></li>
+                                <li><a href="{% url 'table_list' group='by-investor-region' %}">{% trans "By Investor Region" %}</a></li>
+                                <li><a href="{% url 'table_list' group='by-investor-country' %}">{% trans "By Investor Country" %}</a></li>
                             </ul>
                         </li>
                         <li>
