--- a/grid/templates/includes/deal-history.html
+++ b/grid/templates/includes/deal-history.html
@@ -11,51 +11,46 @@
                     </div>
                     <div id="collapse_history" class="panel-collapse collapse">
                         <div class="panel-body">
-                            {% for changedate, item in history.items %}
-                                <div class="row">
-                                    <div class="col-sm-3">
-                                        {% if forloop.counter == 1 %}<strong>{% endif %}
-                                        {{ changedate|timestamp_from_epoch }}
-                                        {% if forloop.counter == 1 %}</strong>{% endif %}
-                                    </div>
-                                    <!-- <td>{{ item.activity_changed_by }}</td>
-                                    <td>activity identifier: {{ item.activity.activity_identifier }}</td>
-                                    <td>availability: {{ item.activity.availability }}</td>
-                                    <td>history id: {{ item.activity.history_id }}</td>
-                                    -->
-                                    {% with dealid=item.activity.activity_identifier|addstr:"_"|addstr:changedate %}
-                                        <div class="col-sm-3">
-
-                                            {% if item.activity.changed_by %}{{ item.activity.changed_by }}{% else %}{% trans "Unknown user" %}{% endif %}
-                                        </div>
-
-                                        <div class="col-sm-3">
-
-                                            {# TODO: Insert correct link and maybe disable button for currently version displayed  #}
-                                            <a type="button" class="btn"
-                                               href="{% url 'deal_detail' deal_id=dealid %}">
-                                                <i class="glyphicon glyphicon-eye-open"></i> {% trans "Show this version" %}
-                                            </a>
-                                        </div>
-
-                                        <div class="col-sm-3">
-
-                                            <a type="button" class="btn"
-                                                    {% if not forloop.last %}
-                                               href="{% url 'compare_deals' activity_1=dealid %}"
-                                                        >
-                                                        <i class="glyphicon glyphicon-transfer"></i>
-                                                        {% trans "Compare with previous version" %}
-                                                    {% else %}
-                                                        disabled>
-                                                        <i class="glyphicon glyphicon-transfer"></i>
-                                                        {% trans "First version" %}
-                                                    {% endif %}
-                                            </a>
-                                        </div>
-                                    {% endwith %}
-                                </div>
-                            {% endfor %}
+                            <div class="col-sm-12">
+                                <table class="table">
+                                    <tbody>
+                                    {% for item in activity.history.all %}
+                                        <tr>
+                                            <td>
+                                                {% if forloop.counter == 1 %}<strong>{% endif %}
+                                                <p>{{ item.history_date }}</p>
+                                                {% if forloop.counter == 1 %}</strong>{% endif %}
+                                            </td>
+                                            <td>
+                                                <p>{% if item.history_user %}{{ item.history_user.get_full_name }}{% else %}{% trans "Unknown user" %}{% endif %}</p>
+                                            </td>
+                                            <td>
+                                                <p>
+                                                {% if item.history_id != activity.history_id %}
+                                                <a type="button" href="{% url 'deal_detail' deal_id=item.activity_identifier history_id=item.history_id %}">
+                                                    <i class="glyphicon glyphicon-eye-open"></i> {% trans "Show this version" %}
+                                                </a>
+                                                {% else %}
+                                                {% trans "This version" %}
+                                                {% endif %}
+                                                </p>
+                                            </td>
+                                            <td>
+                                                <p>
+                                                {% if not forloop.last %}
+                                                <a type="button" href="{% url 'compare_deals' activity_1=activity.id activity_2=item.history_id %}">
+                                                    <i class="glyphicon glyphicon-transfer"></i> {% trans "Compare with previous version" %}
+                                                </a>
+                                                {% else %}
+                                                {% trans "First version" %}
+                                                {% endif %}
+                                                </p>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
