--- a/grid/templates/includes/dealpanels.html
+++ b/grid/templates/includes/dealpanels.html
@@ -34,24 +34,25 @@
                             form.find('.formset-remove-form').trigger('click');
                         });
                         // Init map
-
                         var map = form.find('.maptemplate').removeClass("maptemplate").addClass("map");
                         if (map.length > 0) {
                             var formId = form.find('h3 small').text().replace('#', ''),
                                 mapId = formId - 1; //form.attr('class') + '-' + formId;
-
-
                             map.attr('id', 'map' + mapId);
                             // TODO: Make jquery enumerate forms correctly, or this is the necessary work:
                             // (Needs this kind of stuff for the other fields. no Way!)
-
                             initializeMap(mapId);
                         }
-
+                        // Init investor
                         var investor = form.find('.operational_stakeholder');
                         if (investor.length > 0) {
                             var index = 0;
                             setupSankey(index);
+                        }
+                        // Init data sources
+                        var data_source_type = form.find('.type');
+                        if (data_source_type.length > 0) {
+                            initializeDataSource(form);
                         }
                     }
                     $(document).ready(function () {
