Fixed stakeholder form

--- a/editor/templates/dashboard.html
+++ b/editor/templates/dashboard.html
@@ -213,7 +213,7 @@
                             {% endfor %}
                             </tbody>
                         </table>
-                        <a href="">{% trans "Show all" %}</a>
+                        <!--a href="">{% trans "Show all" %}</a-->
                     {% else %}
                         <p>{% trans "No deals have been added lately." %}</p>
                     {% endif %}
@@ -249,7 +249,7 @@
                             {% endfor %}
                             </tbody>
                         </table>
-                        <a href="">{% trans "Show all" %}</a>
+                        <!--a href="">{% trans "Show all" %}</a-->
                     {% else %}
                         <p>{% trans "No deals have been modified lately." %}</p>
                     {% endif %}
@@ -287,7 +287,7 @@
                             {% endfor %}
                             </tbody>
                         </table>
-                        <a href="">{% trans "Show all" %}</a>
+                        <!--a href="">{% trans "Show all" %}</a-->
                     {% else %}
                         <p>{% trans "No deals have been deleted lately." %}</p>
                     {% endif %}
@@ -370,7 +370,7 @@
                                 {% endfor %}
                                 </tbody>
                             </table>
-                            <a href="{% url 'manage' %}">{% trans "Show all" %}</a>
+                            <!--a href="{% url 'manage' %}">{% trans "Show all" %}</a-->
                         {% else %}
                             <p>{% trans "No pending changesets require your attention." %}</p>
                         {% endif %}
@@ -403,7 +403,7 @@
                             {% endfor %}
                             </tbody>
                         </table>
-                        <a href="{% url 'manage' %}">{% trans "Show all" %}</a>
+                        <!--a href="{% url 'manage' %}">{% trans "Show all" %}</a-->
                     {% else %}
                         <p>{% trans "No feedback requests lately." %}</p>
                     {% endif %}
