--- a/grid/templates/global_base.html
+++ b/grid/templates/global_base.html
@@ -16,7 +16,7 @@
     {% block global_head %}
     {% endblock %}
 {% endblock %}
-{% block body_class %}get-the-detail{% endblock %}
+{% block body_class %}{% endblock %}
 
 
 {% block nav %}
