--- a/grid/templates/stakeholder.html
+++ b/grid/templates/stakeholder.html
@@ -2,14 +2,19 @@
 {% load i18n custom_tags static %}
 {% load humanize %}
 
+{% block head %}
+{{ block.super }}
+    <script src="{% static "js/editor/stakeholder.js" %}" type="text/javascript" charset="utf-8"></script>
+{% endblock %}
+
 {% block header %}
 {% endblock %}
 {% block footer %}
 {% endblock %}
 {% block navutils %}
 {% endblock %}
-{% block page_title %}{% if investor %}{{ investor.name }}{% else %}{% trans "Add Operational stakeholder" %}{% endif %}{% endblock %}
-{% block title %}{% if investor %}{{ investor.name }}{% else %}{% trans "Add Operational stakeholder" %}{% endif %}{% endblock %}
+{% block page_title %}{% if investor %}{{ investor.name }}{% else %}{% trans "Add" %}{% endif %}{% endblock %}
+{% block title %}{% if investor %}{{ investor.name }}{% else %}{% trans "Add" %}{% endif %}{% endblock %}
 
 {% block content %}
 <div class="popup">
@@ -33,21 +38,24 @@
                         {{ form.id }}
                         {{ form.id.errors }}
                     </div>
-                    <div class="controls col-md-4">
-                        <div class="input-group">
-                            {{ form.percentage|add_class:'form-control' }}
-                            <div class="input-group-addon">{{ form.percentage.help_text }}</div>
-                            <a class="btn pull-right add-form">
-                                <i class="fa fa-plus"></i>
-                                {% trans "Add another" %}
-                            </a>
-                            <a class="btn pull-right remove-form">
-                                <i class="fa fa-minus"></i>
-                                {% trans "Remove" %}
-                            </a>
-                        </div>
-                        {{ form.percentage.errors }}
-
+                    <div class="controls col-md-2 loans_amount">
+                        {{ form.loans_amount|add_class:'form-control' }}
+                    </div>
+                    <div class="controls col-md-1 loans_currency">
+                        {{ form.loans_currency|add_class:'form-control' }}
+                    </div>
+                    <div class="controls col-md-1 loans_date">
+                        {{ form.loans_date|add_class:'form-control' }}
+                    </div>
+                    <div class="controls col-md-2">
+                        <a class="btn pull-right add-form">
+                            <i class="fa fa-plus"></i>
+                            {% trans "Add another" %}
+                        </a>
+                        <a class="btn pull-right remove-form">
+                            <i class="fa fa-minus"></i>
+                            {% trans "Remove" %}
+                        </a>
                     </div>
                 </div>
                 {% endfor %}
@@ -68,7 +76,7 @@
                             {{ form.id }}
                             {{ form.id.errors }}
                         </div>
-                        <div class="controls col-md-4">
+                        <div class="controls col-md-6">
                             <div class="input-group">
                                 {{ form.percentage|add_class:'form-control' }}
                                 <div class="input-group-addon">{{ form.percentage.help_text }}</div>
@@ -87,69 +95,7 @@
                 {% endfor %}
             </div>
         </div>
-
-
-            {% if history|length > 1 %}
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <a id="history" data-toggle="collapse" data-parent="#accordion" href="#collapse_history">
-                            <h5 class="panel-title">
-                                {% trans "History" %}
-                                <span id="collapsebtn_history"
-                                      class="lm-chevron-circle-down pull-right mgrey1"></span>
-                            </h5>
-                        </a>
-                    </div>
-                    <div id="collapse_history" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            {% for changedate, item in history.items %}
-                                <div class="row">
-                                    <div class="col-sm-3">
-                                        {% if forloop.counter == 1 %}<strong>{% endif %}
-                                        {{ changedate|timestamp_from_epoch }}
-                                        {% if forloop.counter == 1 %}</strong>{% endif %}
-                                    </div>
-                                    <!-- <td>{{ item.activity_changed_by }}</td>
-                                    <td>activity identifier: {{ item.activity.activity_identifier }}</td>
-                                    <td>availability: {{ item.activity.availability }}</td>
-                                    <td>history id: {{ item.activity.history_id }}</td>
-                                    -->
-                                    {% with investorid=item.id|addstr:"_"|addstr:changedate %}
-
-                                        <div class="col-sm-3">
-                                            {{ item.changed_by }}
-                                        </div>
-
-                                        <div class="col-sm-3">
-                                            {# TODO: Insert correct link and maybe disable button for currently version displayed  #}
-                                            <a type="button" class="btn"
-                                               href="{% url 'stakeholder_form' investor_id=investorid %}">
-                                                <i class="glyphicon glyphicon-eye-open"></i> {% trans "Show this version" %}
-                                            </a>
-                                        </div>
-
-                                        <div class="col-sm-3">
-                                            <a type="button" class="btn"
-                                                    {% if not forloop.last %}
-                                               href="{% url 'compare_investors' investor_1=investorid %}"
-                                                        >
-                                                        <i class="glyphicon glyphicon-transfer"></i>
-                                                        {% trans "Compare with previous version" %}
-                                                    {% else %}
-                                                        disabled>
-                                                        <i class="glyphicon glyphicon-transfer"></i>
-                                                        {% trans "First version" %}
-                                                    {% endif %}
-                                            </a>
-                                        </div>
-
-                                    {% endwith %}
-                                </div>
-                            {% endfor %}
-                        </div>
-                    </div>
-                </div>
-            {% endif %}
+        {% include "includes/stakeholder-history.html" %}
 
         <div class="row">
             <div class="col-sm-12">
