--- a/landmatrix/static/css/forms.scss
+++ b/landmatrix/static/css/forms.scss
@@ -158,7 +158,6 @@ textarea {
 }
 
 .investorops {
-  float: right;
   display: inline-block;
 }
 
@@ -186,7 +185,7 @@ a.remove-ybd {
   border-color: transparent;
   visibility: collapse;
   margin-left: 20px;
-  float: right;
+  display: inline-block;
   color: #414141;
   width: 120px;
   text-align: left;
@@ -208,131 +207,39 @@ a.remove-ybd:hover {
   color: $lm_orange;
 }
 
-@media (min-width: 992px) {
+.control-group .input-group {
+  width: auto;
+  display: block;
+  clear: both;
+}
 
-  .input-group .form-control.year-based {
-    width: 70%;
-  }
+.control-group .input-group > * {
+  display: inline-block;
+}
 
-  .input-group .form-control.year-based-year {
-    width: 30%;
-  }
+.control-group .input-group .year-based,
+.control-group .input-group input,
+.control-group .input-group select {
+  width: 200px;
+}
 
-  .negotiation_status .input-group,
-  .implementation_status .input-group {
-    width: 80%;
-  }
-  .negotiation_status .input-group .year-based,
-  .implementation_status .input-group .year-based {
-    width: 40%;
-  }
-  .negotiation_status .input-group .year-based-year,
-  .implementation_status .input-group .year-based-year {
-    width: 30%;
-  }
+.control-group .input-group .year-based-year {
+  width: 120px;
+}
 
-  .contract_size .input-group,
-  .production_size .input-group,
-  .agreement_duration .input-group,
-  .total_jobs_current .input-group,
-  .total_jobs_current_employees .input-group,
-  .total_jobs_current_daily_workers .input-group,
-  .domestic_jobs_current .input-group,
-  .domestic_jobs_current_employees .input-group,
-  .domestic_jobs_current_daily_workers .input-group,
-  .foreign_jobs_current .input-group,
-  .foreign_jobs_current_employees .input-group,
-  .foreign_jobs_current_daily_workers .input-group,
-  .on_the_lease_area .input-group,
-  .on_the_lease_farmers .input-group,
-  .on_the_lease_households .input-group,
-  .off_the_lease_area .input-group,
-  .off_the_lease_farmers .input-group,
-  .off_the_lease_households .input-group,
-  .actors_involved .input-group,
-  .actors_classification .input-group {
-    width: 80%;
-  }
+.input-group .select2 {
+  width: 280px !important;
+  min-width: auto !important;
+  float: left;
+}
 
-  .contract_size .input-group .year-based,
-  .production_size .input-group .year-based,
-  .agreement_duration .input-group .year-based,
-  .total_jobs_current .input-group .year-based,
-  .total_jobs_current_employees .input-group .year-based,
-  .total_jobs_current_daily_workers .input-group .year-based,
-  .domestic_jobs_current .input-group .year-based,
-  .domestic_jobs_current_employees .input-group .year-based,
-  .domestic_jobs_current_daily_workers .input-group .year-based,
-  .foreign_jobs_current .input-group .year-based,
-  .foreign_jobs_current_employees .input-group .year-based,
-  .foreign_jobs_current_daily_workers .input-group .year-based,
-  .on_the_lease_area .input-group .year-based,
-  .on_the_lease_farmers .input-group .year-based,
-  .on_the_lease_households .input-group .year-based,
-  .off_the_lease_area .input-group .year-based,
-  .off_the_lease_farmers .input-group .year-based,
-  .off_the_lease_households .input-group .year-based
-  .actors_involved .input-group .year-based,
-  .actors_classification .input-group .year-based {
-    width: 62%;
-  }
-
-  .contract_size .input-group .year-based-year,
-  .production_size .input-group .year-based-year,
-  .agreement_duration .input-group .year-based-year,
-  .total_jobs_current .input-group .year-based-year,
-  .total_jobs_current_employees .input-group .year-based-year,
-  .total_jobs_current_daily_workers .input-group .year-based-year,
-  .domestic_jobs_current .input-group .year-based-year,
-  .domestic_jobs_current_employees .input-group .year-based-year,
-  .domestic_jobs_current_daily_workers .input-group .year-based-year,
-  .foreign_jobs_current .input-group .year-based-year,
-  .foreign_jobs_current_employees .input-group .year-based-year,
-  .foreign_jobs_current_daily_workers .input-group .year-based-year,
-  .on_the_lease_area .input-group .year-based-year,
-  .on_the_lease_farmers .input-group .year-based-year,
-  .on_the_lease_households .input-group .year-based-year,
-  .off_the_lease_area .input-group .year-based-year,
-  .off_the_lease_farmers .input-group .year-based-year,
-  .off_the_lease_households .input-group .year-based-year
-  .actors_involved .input-group .year-based-year,
-  .actors_classification .input-group .year-based-year {
-    width: 38%;
-  }
-
-  .crops .input-group,
-  .animals .input-group,
-  .minerals .input-group,
-  .contract_farming_crops .input-group,
-  .contract_farming_animals .input-group {
-    width: 80%;
-  }
-
-  .crops .input-group .select2,
-  .animals .input-group .select2,
-  .minerals .input-group .select2,
-  .contract_farming_crops .input-group .select2,
-  .contract_farming_animals .input-group .select2 {
-    width: 280px !important;
-    min-width: auto;
-    float: left;
-  }
-
-  .crops .input-group .year-based,
-  .animals .input-group .year-based,
-  .minerals .input-group .year-based,
-  .contract_farming_crops .input-group .year-based,
-  .contract_farming_animals .input-group .year-based {
-    width: 80px;
-  }
-
-  .crops .input-group .year-based-year,
-  .animals .input-group .year-based-year,
-  .minerals .input-group .year-based-year,
-  .contract_farming_crops .input-group .year-based-year,
-  .contract_farming_animals .input-group .year-based-year {
-    width: 120px;
-  }
+.control-group .input-group-addon {
+  border-top-right-radius: 4px !important;
+  border-bottom-right-radius: 4px !important;
+  width: auto;
+  height: 3em;
+  display: inline-block;
+  padding: 14px 12px;
 }
 
 .dynamic-form .remove-form {
