--- a/landmatrix/static/css/main.css
+++ b/landmatrix/static/css/main.css
@@ -403,7 +403,6 @@ textarea {
   padding: 5px 5px; }
 
 .investorops {
-  float: right;
   display: inline-block; }
 
 .with-error .panel-heading h5,
@@ -426,7 +425,7 @@ a.remove-ybd {
   border-color: transparent;
   visibility: collapse;
   margin-left: 20px;
-  float: right;
+  display: inline-block;
   color: #414141;
   width: 120px;
   text-align: left; }
@@ -445,109 +444,34 @@ a.remove-ybd:hover {
   visibility: visible;
   color: #fc941f; }
 
-@media (min-width: 992px) {
-  .input-group .form-control.year-based {
-    width: 70%; }
-  .input-group .form-control.year-based-year {
-    width: 30%; }
-  .negotiation_status .input-group,
-  .implementation_status .input-group {
-    width: 80%; }
-  .negotiation_status .input-group .year-based,
-  .implementation_status .input-group .year-based {
-    width: 40%; }
-  .negotiation_status .input-group .year-based-year,
-  .implementation_status .input-group .year-based-year {
-    width: 30%; }
-  .production_size .input-group,
-  .contract_size .input-group,
-  .agreement_duration .input-group,
-  .total_jobs_current .input-group,
-  .total_jobs_current_employees .input-group,
-  .total_jobs_current_daily_workers .input-group,
-  .domestic_jobs_current .input-group,
-  .domestic_jobs_current_employees .input-group,
-  .domestic_jobs_current_daily_workers .input-group,
-  .foreign_jobs_current .input-group,
-  .foreign_jobs_current_employees .input-group,
-  .foreign_jobs_current_daily_workers .input-group,
-  .on_the_lease_area .input-group,
-  .on_the_lease_farmers .input-group,
-  .on_the_lease_households .input-group,
-  .off_the_lease_area .input-group,
-  .off_the_lease_farmers .input-group,
-  .off_the_lease_households .input-group,
-  .actors_involved .input-group,
-  .actors_classification .input-group {
-    width: 80%; }
-  .production_size .input-group .year-based,
-  .contract_size .input-group .year-based,
-  .agreement_duration .input-group .year-based,
-  .total_jobs_current .input-group .year-based,
-  .total_jobs_current_employees .input-group .year-based,
-  .total_jobs_current_daily_workers .input-group .year-based,
-  .domestic_jobs_current .input-group .year-based,
-  .domestic_jobs_current_employees .input-group .year-based,
-  .domestic_jobs_current_daily_workers .input-group .year-based,
-  .foreign_jobs_current .input-group .year-based,
-  .foreign_jobs_current_employees .input-group .year-based,
-  .foreign_jobs_current_daily_workers .input-group .year-based,
-  .on_the_lease_area .input-group .year-based,
-  .on_the_lease_farmers .input-group .year-based,
-  .on_the_lease_households .input-group .year-based,
-  .off_the_lease_area .input-group .year-based,
-  .off_the_lease_farmers .input-group .year-based,
-  .off_the_lease_households .input-group .year-based
-.actors_involved .input-group .year-based,
-  .actors_classification .input-group .year-based {
-    width: 62%; }
-  .production_size .input-group .year-based-year,
-  .contract_size .input-group .year-based-year,
-  .agreement_duration .input-group .year-based-year,
-  .total_jobs_current .input-group .year-based-year,
-  .total_jobs_current_employees .input-group .year-based-year,
-  .total_jobs_current_daily_workers .input-group .year-based-year,
-  .domestic_jobs_current .input-group .year-based-year,
-  .domestic_jobs_current_employees .input-group .year-based-year,
-  .domestic_jobs_current_daily_workers .input-group .year-based-year,
-  .foreign_jobs_current .input-group .year-based-year,
-  .foreign_jobs_current_employees .input-group .year-based-year,
-  .foreign_jobs_current_daily_workers .input-group .year-based-year,
-  .on_the_lease_area .input-group .year-based-year,
-  .on_the_lease_farmers .input-group .year-based-year,
-  .on_the_lease_households .input-group .year-based-year,
-  .off_the_lease_area .input-group .year-based-year,
-  .off_the_lease_farmers .input-group .year-based-year,
-  .off_the_lease_households .input-group .year-based-year
-.actors_involved .input-group .year-based-year,
-  .actors_classification .input-group .year-based-year {
-    width: 38%; }
-  .crops .input-group,
-  .animals .input-group,
-  .minerals .input-group,
-  .contract_farming_crops .input-group,
-  .contract_farming_animals .input-group {
-    width: 80%; }
-  .crops .input-group .select2,
-  .animals .input-group .select2,
-  .minerals .input-group .select2,
-  .contract_farming_crops .input-group .select2,
-  .contract_farming_animals .input-group .select2 {
-    width: 280px !important;
-    min-width: auto;
-    float: left; }
-  .crops .input-group .year-based,
-  .animals .input-group .year-based,
-  .minerals .input-group .year-based,
-  .contract_farming_crops .input-group .year-based,
-  .contract_farming_animals .input-group .year-based {
-    width: 80px; }
-  .crops .input-group .year-based-year,
-  .animals .input-group .year-based-year,
-  .minerals .input-group .year-based-year,
-  .contract_farming_crops .input-group .year-based-year,
-  .contract_farming_animals .input-group .year-based-year {
-    width: 120px; } }
+.control-group .input-group {
+  width: auto;
+  display: block;
+  clear: both; }
+
+.control-group .input-group > * {
+  display: inline-block; }
+
+.control-group .input-group .year-based,
+.control-group .input-group input,
+.control-group .input-group select {
+  width: 200px; }
+
+.control-group .input-group .year-based-year {
+  width: 120px; }
+
+.input-group .select2 {
+  width: 280px !important;
+  min-width: auto !important;
+  float: left; }
+
+.control-group .input-group-addon {
+  border-top-right-radius: 4px !important;
+  border-bottom-right-radius: 4px !important;
+  width: auto;
+  height: 3em;
+  display: inline-block;
+  padding: 14px 12px; }
 
 .dynamic-form .remove-form {
   display: none; }
@@ -587,13 +511,13 @@ select:not([multiple]) {
   #filterrow h6 {
     margin: 10px 0 5px; }
 
-#statusrow h6,
-#columnsrow h6 {
+#columnsrow h6,
+#statusrow h6 {
   color: #c6c6c6;
   margin: 15px 0 5px; }
 
-#statusrow .select2,
-#columnsrow .select2 {
+#columnsrow .select2,
+#statusrow .select2 {
   width: 100% !important; }
 
 #filters ul.variables h4 {
@@ -1072,8 +996,8 @@ p a {
 .controls .select2,
 .controls .select2-container,
 .controls .select2-main {
-  min-width: 90%;
-  max-width: 90%;
+  min-width: 80%;
+  max-width: 80%;
   min-height: 3em;
   margin-bottom: 1em; }
   #comparison > .input-group .investorfield, #comparison >
