--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js"> <!--<![endif]-->
+<html lang="en" class="no-js"> <!--<![endif]-->
 <head>
 
     <meta charset="utf-8">
@@ -38,7 +38,7 @@
     {% endblock %}
 
 </head>
-<body class="{% if popup %}popup {% endif %}">
+<body class="{% if popup %}popup {% endif %}{% block body_class %}{% endblock %}">
 
 {% block header %}
     <div class="navbar navbar-default navbar-main" role="navigation">
