Fixed saving deals

--- a/landmatrix/static/css/forms.scss
+++ b/landmatrix/static/css/forms.scss
@@ -167,7 +167,7 @@ textarea {
 }
 
 .control-group.with-error .form-control,
-.control-group.with-error .select-selection {
+.control-group.with-error .select2-selection {
   border-color: red;
 }
 
