Switched select all to select/deselect toggle

--- a/templates/filters.html
+++ b/templates/filters.html
@@ -109,7 +109,9 @@
                         </optgroup>
                         {% endfor %}
                     </select>
-                    <a id="select-all-columns" href="#">{% trans "Select All" %}</a>               
+                    <a id="select-all-columns" class="pull-right" href="#">
+                        {% trans "Select All" %}
+                    </a>
                 </div>
             </div>
             {% endif %}
